# simple-notepad-project

./: CMakeLists.txt  main_window.cpp  main_window.h  notepad_exception.h  spell_checker.h  spell_checker_highlighter.h  text_transform.h  word_frequency_dialog.cpp  word_frequency_dialog.h  word_frequency_dialog.ui
